--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     Sortear amigo
                 </button>
             </div>
+
+             <div class="button-container">
+                <button class="button-draw" onclick="reiniciarTela()" aria-label="reiniciar o sorteio">
+                    <img src="assets/play_circle_outline.png" alt="Ícone para limpar lista">
+                   limpar lista
+                </button>
+            </div>
         </section>
     </main>
 
